# kafka2delta

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/: auto-assign-reviewers.yaml
.github/workflows/: build.yaml  release.yaml
resources/: kafka-cluster.yaml  kafka-connect.Dockerfile  kafka-connect.yaml  kafka-connector.yaml  kafka-topics.yaml  kind-config.yaml
src/kafka2delta/: __init__.py  conftest.py
src/kafka2delta/config/: __init__.py  config.py
src/kafka2delta/stream/: __init__.py  stream.py
src/kafka2delta/stream/test/: stream_listener.py  stream_test.py
src/kafka2delta/udf/: __init__.py  udf.py
src/kafka2delta/utils/: __init__.py  utils.py
src/kafka2delta/utils/test/: avro_schema.py  avro_test.py
