[build-system]
requires = [
    "setuptools>=75.8.0",
    "wheel>=0.45.1"
]
build-backend = "setuptools.build_meta"

[project]
name = "kafka2delta"
dynamic = ["version"]
description = "Stream Change Data Capture data from Kafka into Delta Tables using Spark StructuredStreaming."
authors = [
    { name = "Sebastian Daberdaku", email = "112859176+sdaberdaku@users.noreply.github.com" },
    { name = "Aleksander Duka", email = "87473472+aleksanderduka@users.noreply.github.com" },
]
requires-python = ">=3.10"
dependencies = [
    "confluent-kafka>=2.5.0,<2.6.0",
    "delta-spark>=3.2.0,<4.0.0",
    "pyspark>=3.5.1,<4.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
license-files = ["LICENSE"]
keywords = ["CDC", "Debezium", "Kafka", "Delta Lake", "Spark", "PostgreSQL"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Repository = "https://github.com/sdaberdaku/kafka2delta.git"
Issues = "https://github.com/sdaberdaku/kafka2delta/issues"

[tool.setuptools]
include-package-data = true
packages = { find = { where = ["src"] } }

[tool.setuptools.dynamic]
version = { attr = "kafka2delta.__version__" }

[tool.pytest.ini_options]
testpaths = ["src"]